Fixed vertical-align

--- a/trunk/site/static.css
+++ b/trunk/site/static.css
@@ -1,4 +1,4 @@
-﻿/* Default
+ /* Default
 ----------------------------------------------- */
 * {
   margin: 0;
@@ -14,6 +14,7 @@
 ----------------------------------------------- */
 select, button, input[type="button"], input[type="submit"] {
   padding: 1ex;
+  vertical-align: bottom;
 }
 
 /* Controls
